--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
- <!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html>
+<html><head>
 <title>Running</title>
-</head>
-<body>
-
+</head><body>
 <h1>Running</h1>
-<p>Test</p>
-
-</body>
-</html> 
+2017-04-11 17:15:09.669533
+<br>A:45.496003601272605<br>B:142.94498082318063</body></html> 
