--- a/index.html
+++ b/index.html
@@ -3,5 +3,13 @@
 <title>Running</title>
 </head><body>
 <h1>Running</h1>
-2017-04-11 17:15:09.669533
-<br>A:45.496003601272605<br>B:142.94498082318063</body></html> 
+<b>2017-04-01</b><br>
+A:34.00<br>B:123.00<br>
+<b>2017-04-11 17:15:09.669533</b>
+<br>A:45.496003601272605<br>B:142.94498082318063<br>
+<b>2017-04-12 21:38:52.701000</b>
+<br>A:45.496003601272605<br>B:148.6612508231806<br>
+
+
+</body></html> 
+
