--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
 <html><head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <title>Running</title>
-</head><body>
+</head>
+<body>
 <h1>Running</h1>
+
+<div class="container">
+  <div class="progress">
+   <div class="progress-bar" role="progressbar" style="width:39.16%">
+ 	A: 39.16%, (46.99/120.00 km)
+   </div>
+  </div>
+
+  <div class="progress">
+   <div class="progress-bar" role="progressbar" style="width:43.95%">
+  B: 43.95%, (52.74/120.00 km)
+   </div>
+  </div>
+ </div>
+
+
 <b>2017-04-01</b><br>
 A:34.00<br>B:123.00<br>
 <b>2017-04-11 17:15:09.669533</b>
