--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 <div class="container">
   <div class="progress">
    <div class="progress-bar" role="progressbar" style="width:39.16%">
- 	A: 39.16%, (46.99/120.00 km)
+ A: 39.16%, (46.99/120.00 km)
    </div>
   </div>
+ </div>
 
+<div class="container">
   <div class="progress">
-   <div class="progress-bar" role="progressbar" style="width:43.95%">
-  B: 43.95%, (52.74/120.00 km)
+   <div class="progress-bar" role="progressbar" style="width:54.55%">
+ B: 54.55%, (65.46/120.00 km)
    </div>
   </div>
  </div>
@@ -43,6 +45,8 @@ A:34.00<br>B:123.00<br>
 <br>A:61.320401225820916<br>B:168.60965837507348<br>
 <b>2017-04-25 13:17:14.671886</b>
 <br>A:80.99012090519328<br>B:175.7375537093535<br>
+<b>2017-04-27 21:05:24.627489</b>
+<br>A:80.99012090519328<br>B:188.46340370935349<br>
   
 </body></html> 
 
