--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ A:34.00<br>B:123.00<br>
 <br>A:117.73753564956492<br>B:205.82649630817966<br>
   
   
-<img src="https://github.com/Chichinghsu/chichinghsu.github.io/blob/master/donutes.jpg" alt="Donutes">
+<img src="https://raw.githubusercontent.com/Chichinghsu/chichinghsu.github.io/master/donutes.jpg" alt="Donutes">
 
   
 </body></html> 
