--- a/index.html
+++ b/index.html
@@ -1,65 +1,47 @@
 <!DOCTYPE html>
-<html><head>
+<html>
+<head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<title>Running</title>
+<title>Articles</title>
+<style>
+h3 {padding-left:1em;}
+b {padding-left:2em;}
+</style>
 </head>
 <body>
-<h1>Running</h1>
-<div class="container">
-  <div class="progress">
-   <div class="progress-bar" role="progressbar" style="width:96.4%">
- A: 96.4%, (115.68/120.00 km)
-   </div>
-  </div>
- </div>
+<h1>Articles</h1>
 
-<div class="container">
-  <div class="progress">
-   <div class="progress-bar" role="progressbar" style="width:114.78%">
- B: 114.78%, (137.74/120.00 km)
-   </div>
-  </div>
- </div>
+<b><a href="https://medium.com/@chichinghsu">CCHsu @medium</a></b>
 
-<b>2017-04-01</b><br>
-A:34.00<br>B:123.00<br>
-<b>2017-04-11 17:15:09.669533</b>
-<br>A:45.496003601272605<br>B:142.94498082318063<br>
-<b>2017-04-12 21:38:52.701000</b>
-<br>A:45.496003601272605<br>B:148.6612508231806<br>
-<b>2017-04-13 16:13:08.625322</b>
-<br>A:51.91344024015781<br>B:148.6612508231806<br>
-<b>2017-04-14 20:26:37.594971</b>
-<br>A:51.91344024015781<br>B:148.6612508231806<br>
-<b>2017-04-15 21:29:33.494436</b>
-<br>A:51.91344024015781<br>B:154.96312082318053<br>
-<b>2017-04-17 21:30:58.979043</b>
-<br>A:51.91344024015781<br>B:159.46810082318058<br>
-<b>2017-04-19 12:29:12.806780</b>
-<br>A:51.91344024015781<br>B:164.47626082318067<br>
-<b>2017-04-23 12:51:18.917995</b>
-<br>A:61.320401225820916<br>B:168.60965837507348<br>
-<b>2017-04-25 13:17:14.671886</b>
-<br>A:80.99012090519328<br>B:175.7375537093535<br>
-<b>2017-04-27 21:05:24.627489</b>
-<br>A:80.99012090519328<br>B:188.46340370935349<br>
-<b>2017-04-30 16:32:45.874935</b>
-<br>A:80.99012090519328<br>B:193.50289370935354<br>
-<b>2017-05-04 19:52:44.861801</b>
-<br>A:97.60858055100773<br>B:205.82649630817966<br>
-<b>2017-05-11 22:22:09.545787</b>
-<br>A:117.73753564956492<br>B:205.82649630817966<br>
-<b>2017-05-15 20:42:09.547807</b>
-<br>A:117.73753564956492<br>B:205.82649630817966<br>
-<b>2017-05-23 19:47:29.041506</b>
-<br>A:141.07644462916684<br>B:235.85096630817952<br>
-<b>2017-06-06 16:02:06.494766</b>
-<br>A:149.6836608191853<br>B:260.74145630817964<br>
-  
-<img src="https://raw.githubusercontent.com/Chichinghsu/chichinghsu.github.io/master/donutes.jpg" alt="Donutes">
+<h3>碩士生活 ETH Zürich</h3>
+<b>Feb 25, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-%E4%BA%8C-%E8%A2%AB%E7%95%B6%E5%95%A6-d6329b73269a">我在台灣的那套讀書方式派不上用場（二）被當啦</a><br>
+<b>Jan 17, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-b21b15a87493">我在台灣的那套讀書方式派不上用場</a><br>
+<b>Jan 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E8%81%AF%E9%82%A6%E7%90%86%E5%B7%A5%E5%AD%B8%E9%99%A2-eth-z%C3%BCrich%E7%94%B3%E8%AB%8B%E5%B0%8F%E5%B0%8F%E5%BF%83%E5%BE%97%E7%B8%BD%E7%B5%90-360766f2aa3c">蘇黎世聯邦理工學院 ETH Zürich申請小小心得總結</a><br>
+<b>Dec 31, 2018</b> <a href="https://medium.com/@chichinghsu/%E8%AE%80%E6%A9%9F%E5%99%A8%E5%AD%B8%E7%BF%92-ensemble-learning%E6%9C%89%E6%84%9F%E8%80%8C%E7%99%BC%E4%B9%8B%E6%B0%91%E4%B8%BB%E5%88%B6%E5%BA%A6%E7%9A%84%E5%8F%8D%E6%80%9D-9a843f11b291">讀機器學習 Ensemble learning有感而發之民主制度的反思</a><br>
+<b>Dec 27, 2018</b> <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a>
 
-  
+<h3>書 Books</h3>
+<b>Jun 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%A1%8C%E9%81%8E%E5%9C%B0%E7%8D%84%E4%B9%8B%E8%B7%AF-%E4%BD%A0%E5%8F%AF%E4%BB%A5%E5%B0%8D%E6%8A%97%E5%85%A8%E4%B8%96%E7%95%8C%E5%97%8E-579a107c103d">《行過地獄之路》你可以對抗全世界嗎</a><br>
+<b>Mar 21, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%8B%92%E7%B5%95%E6%89%BF%E8%AA%8D%E4%BA%BA%E7%94%9F%E6%B2%92%E6%9C%89%E6%84%8F%E7%BE%A9-a5ac60e0648c">《人性枷鎖》拒絕承認人生沒有意義</a>
+
+<h3>建築 Architecture</h3>
+<b>Feb 8, 2019</b> <a href="https://medium.com/@chichinghsu/rem-koolhaas-%E8%91%A1%E8%90%84%E7%89%99-porto-%E4%BD%9C%E5%93%81-casa-da-m%C3%BAsica-%E5%B7%A1%E7%A6%AE-bfeaa180bf9d">Rem Koolhaas 葡萄牙 Porto 作品 Casa da Música 巡禮</a>
+
+<h3>遊記 Travel</h3>
+<b>Nov 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%90%89%E7%88%BE%E5%90%89%E6%96%AF-kyrgyzstan-%E4%B9%8B%E6%97%85-9637ced4238d">吉爾吉斯 (Kyrgyzstan)之旅</a><br>
+<b>Mar 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%93%88%E8%96%A9%E5%85%8B%E9%98%BF%E6%8B%89%E6%9C%A8%E5%9C%96%E6%A9%9F%E5%A0%B4%E5%A5%87%E9%81%87%E8%A8%98-b559176295ee">哈薩克阿拉木圖機場奇遇記</a>
+
+<h3>瑞士 Switzerland</h3>
+<b>Apr 4, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E4%B8%AD%E5%A4%AE%E8%BB%8A%E7%AB%99%E7%9A%84%E7%BE%8E%E4%B9%83%E6%BB%8B%E8%A9%A6%E5%90%83%E5%93%81-7cb7ded5e658">蘇黎世中央車站的美乃滋試吃品
+</a><br>
+<b>Jan 2, 2019</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E9%9B%9E%E8%9B%8B%E5%88%86%E9%A1%9E-%E7%82%BA%E4%BB%80%E9%BA%BC%E5%83%B9%E5%B7%AE%E9%82%A3%E9%BA%BC%E5%A4%A7-%E8%9B%8B%E8%9B%8B%E7%9A%84%E5%93%80%E5%82%B7-%E8%AB%87%E4%BA%BA%E9%81%93-%E5%8B%95%E7%89%A9%E9%81%93-85bee19f8eee">瑞士雞蛋分類，為什麼價差那麼大？蛋蛋的哀傷，談人道（動物道）</a><br>
+<b>Dec 29, 2018</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E7%94%A8%E4%BB%80%E9%BA%BC%E8%AA%9E%E8%A8%80-%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AFlogo%E4%BA%82%E8%AB%87-f0859a5f728c">瑞士用什麼語言？怎麼簡寫CH？瑞士鐵路LOGO亂談</a>
+
+<h3>其他 Others</h3>
+<b>Aug 20, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%BE%9E%E4%B8%80%E5%89%87%E5%BD%A9%E5%88%B8%E8%A1%8C%E8%B2%BC%E6%96%87%E7%9C%8B%E5%81%87%E6%96%B0%E8%81%9E%E5%9C%A8%E7%A4%BE%E7%BE%A4%E7%B6%B2%E7%AB%99%E4%B8%8A%E7%9A%84%E5%82%B3%E6%92%AD-15d1188b2d55">從一則彩券行貼文看假新聞在社群網站上的傳播</a><br>
+<b>Jul 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%AD%B8%E7%BF%92%E5%BE%B7%E6%96%87%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%88%87-testdaf-%E5%BE%B7%E7%A6%8F%E8%80%83%E8%A9%A6%E6%BA%96%E5%82%99%E5%BF%83%E5%BE%97-835b78d9a08">學習德文心路歷程與 TestDaF 德福考試準備心得</a><br>
+<b>Apr 15, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%98%BF%E6%BB%B4%E8%8B%B1%E6%96%87%E6%AD%B7%E5%B9%B4%E6%84%9A%E4%BA%BA%E7%AF%80%E5%BD%B1%E7%89%87%E7%95%99%E8%A8%80%E5%88%86%E6%9E%90-f7731171d29e">阿滴英文歷年愚人節影片留言分析</a><br>
+<b>Feb 3, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%82%84%E6%98%AF%E8%A6%81%E6%9C%89%E4%B8%80%E6%8A%80%E4%B9%8B%E9%95%B7%E5%95%8A-be28ad188fac">還是要有一技之長啊！</a><br>
+<b>Jan 8, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%9D%B1%E6%96%B9%E5%BF%AB%E8%BB%8A%E8%AC%80%E6%AE%BA%E6%A1%88-%E7%9C%9F%E7%9A%84%E6%9C%89%E9%80%99%E6%A2%9D%E8%B7%AF%E7%B7%9A-%E8%B7%9F%E8%91%97-google-maps%E8%B5%B0%E4%B8%80%E8%B6%9F-80413df3b390">東方快車謀殺案，真的有這條路線？跟著 Google Maps走一趟</a>
+
 </body></html> 
-
