--- a/index.html
+++ b/index.html
@@ -25,19 +25,21 @@ b {padding-left:2em;}
 <b>Jun 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%A1%8C%E9%81%8E%E5%9C%B0%E7%8D%84%E4%B9%8B%E8%B7%AF-%E4%BD%A0%E5%8F%AF%E4%BB%A5%E5%B0%8D%E6%8A%97%E5%85%A8%E4%B8%96%E7%95%8C%E5%97%8E-579a107c103d">《行過地獄之路》你可以對抗全世界嗎</a><br>
 <b>Mar 21, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%8B%92%E7%B5%95%E6%89%BF%E8%AA%8D%E4%BA%BA%E7%94%9F%E6%B2%92%E6%9C%89%E6%84%8F%E7%BE%A9-a5ac60e0648c">《人性枷鎖》拒絕承認人生沒有意義</a>
 
-<h3>建築 Architecture</h3>
-<b>Feb 8, 2019</b> <a href="https://medium.com/@chichinghsu/rem-koolhaas-%E8%91%A1%E8%90%84%E7%89%99-porto-%E4%BD%9C%E5%93%81-casa-da-m%C3%BAsica-%E5%B7%A1%E7%A6%AE-bfeaa180bf9d">Rem Koolhaas 葡萄牙 Porto 作品 Casa da Música 巡禮</a>
-
 <h3>遊記 Travel</h3>
 <b>May 12, 2020</b> <a href="https://medium.com/@chichinghsu/%E5%81%87%E6%96%B0%E8%81%9E%E7%9A%84%E7%94%A2%E5%9C%B0-%E5%8C%97%E9%A6%AC%E5%85%B6%E9%A0%93%E5%85%B1%E5%92%8C%E5%9C%8B%E4%B9%8B%E6%97%85-18bc667654d">假新聞的產地？北馬其頓共和國之旅</a><br>
 <b>Nov 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%90%89%E7%88%BE%E5%90%89%E6%96%AF-kyrgyzstan-%E4%B9%8B%E6%97%85-9637ced4238d">吉爾吉斯 (Kyrgyzstan)之旅</a><br>
 <b>Mar 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%93%88%E8%96%A9%E5%85%8B%E9%98%BF%E6%8B%89%E6%9C%A8%E5%9C%96%E6%A9%9F%E5%A0%B4%E5%A5%87%E9%81%87%E8%A8%98-b559176295ee">哈薩克阿拉木圖機場奇遇記</a>
 
 <h3>瑞士 Switzerland</h3>
-<b>Apr 4, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E4%B8%AD%E5%A4%AE%E8%BB%8A%E7%AB%99%E7%9A%84%E7%BE%8E%E4%B9%83%E6%BB%8B%E8%A9%A6%E5%90%83%E5%93%81-7cb7ded5e658">蘇黎世中央車站的美乃滋試吃品
-</a><br>
+<b>Apr 4, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E4%B8%AD%E5%A4%AE%E8%BB%8A%E7%AB%99%E7%9A%84%E7%BE%8E%E4%B9%83%E6%BB%8B%E8%A9%A6%E5%90%83%E5%93%81-7cb7ded5e658">蘇黎世中央車站的美乃滋試吃品</a><br>
 <b>Jan 2, 2019</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E9%9B%9E%E8%9B%8B%E5%88%86%E9%A1%9E-%E7%82%BA%E4%BB%80%E9%BA%BC%E5%83%B9%E5%B7%AE%E9%82%A3%E9%BA%BC%E5%A4%A7-%E8%9B%8B%E8%9B%8B%E7%9A%84%E5%93%80%E5%82%B7-%E8%AB%87%E4%BA%BA%E9%81%93-%E5%8B%95%E7%89%A9%E9%81%93-85bee19f8eee">瑞士雞蛋分類，為什麼價差那麼大？蛋蛋的哀傷，談人道（動物道）</a><br>
 <b>Dec 29, 2018</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E7%94%A8%E4%BB%80%E9%BA%BC%E8%AA%9E%E8%A8%80-%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AFlogo%E4%BA%82%E8%AB%87-f0859a5f728c">瑞士用什麼語言？怎麼簡寫CH？瑞士鐵路LOGO亂談</a>
+
+<h3>電影 Movies</h3>
+<b>June 6, 2020</b> <a href="https://medium.com/@chichinghsu/irrational-man-%E6%84%9B%E6%83%85%E5%A4%B1%E6%8E%A7%E9%BB%9E-%E5%8F%AF%E4%BB%A5%E5%86%8D%E5%A4%B1%E6%8E%A7%E4%B8%80%E9%BB%9E-2d42b989c43a">Irrational Man 《愛情失控點》可以再失控一點</a>
+
+<h3>建築 Architecture</h3>
+<b>Feb 8, 2019</b> <a href="https://medium.com/@chichinghsu/rem-koolhaas-%E8%91%A1%E8%90%84%E7%89%99-porto-%E4%BD%9C%E5%93%81-casa-da-m%C3%BAsica-%E5%B7%A1%E7%A6%AE-bfeaa180bf9d">Rem Koolhaas 葡萄牙 Porto 作品 Casa da Música 巡禮</a>
 
 <h3>其他 Others</h3>
 <b>Aug 20, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%BE%9E%E4%B8%80%E5%89%87%E5%BD%A9%E5%88%B8%E8%A1%8C%E8%B2%BC%E6%96%87%E7%9C%8B%E5%81%87%E6%96%B0%E8%81%9E%E5%9C%A8%E7%A4%BE%E7%BE%A4%E7%B6%B2%E7%AB%99%E4%B8%8A%E7%9A%84%E5%82%B3%E6%92%AD-15d1188b2d55">從一則彩券行貼文看假新聞在社群網站上的傳播</a><br>
