--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ b {padding-left:2em;}
 <b>Mar 21, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%8B%92%E7%B5%95%E6%89%BF%E8%AA%8D%E4%BA%BA%E7%94%9F%E6%B2%92%E6%9C%89%E6%84%8F%E7%BE%A9-a5ac60e0648c">《人性枷鎖》拒絕承認人生沒有意義</a>
 
 <h3>遊記 Travel</h3>
+<b>July 31, 2020</b> <a href="https://medium.com/@chichinghsu/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2020-%E5%B9%B4%E5%88%9D-7d8e90f0f1da">英國倫敦 2020 年初
+</a><br>
 <b>May 12, 2020</b> <a href="https://medium.com/@chichinghsu/%E5%81%87%E6%96%B0%E8%81%9E%E7%9A%84%E7%94%A2%E5%9C%B0-%E5%8C%97%E9%A6%AC%E5%85%B6%E9%A0%93%E5%85%B1%E5%92%8C%E5%9C%8B%E4%B9%8B%E6%97%85-18bc667654d">假新聞的產地？北馬其頓共和國之旅</a><br>
 <b>Nov 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%90%89%E7%88%BE%E5%90%89%E6%96%AF-kyrgyzstan-%E4%B9%8B%E6%97%85-9637ced4238d">吉爾吉斯 (Kyrgyzstan)之旅</a><br>
 <b>Mar 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%93%88%E8%96%A9%E5%85%8B%E9%98%BF%E6%8B%89%E6%9C%A8%E5%9C%96%E6%A9%9F%E5%A0%B4%E5%A5%87%E9%81%87%E8%A8%98-b559176295ee">哈薩克阿拉木圖機場奇遇記</a>
