--- a/index.html
+++ b/index.html
@@ -40,17 +40,19 @@ b {padding-left:2em;}
 <b>Jan 2, 2019</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E9%9B%9E%E8%9B%8B%E5%88%86%E9%A1%9E-%E7%82%BA%E4%BB%80%E9%BA%BC%E5%83%B9%E5%B7%AE%E9%82%A3%E9%BA%BC%E5%A4%A7-%E8%9B%8B%E8%9B%8B%E7%9A%84%E5%93%80%E5%82%B7-%E8%AB%87%E4%BA%BA%E9%81%93-%E5%8B%95%E7%89%A9%E9%81%93-85bee19f8eee">瑞士雞蛋分類，為什麼價差那麼大？蛋蛋的哀傷，談人道（動物道）</a><br>
 <b>Dec 29, 2018</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E7%94%A8%E4%BB%80%E9%BA%BC%E8%AA%9E%E8%A8%80-%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AFlogo%E4%BA%82%E8%AB%87-f0859a5f728c">瑞士用什麼語言？怎麼簡寫CH？瑞士鐵路LOGO亂談</a>
 
+<h3>其他 Others</h3>
+<b>Aug 13, 2020</b> <a href="https://medium.com/@chichinghsu/%E4%BB%8B%E7%B4%B9%E6%88%91%E7%9C%8B%E4%B8%80%E6%9C%AC%E5%A4%A9%E6%96%87%E5%AD%B8%E7%9A%84%E6%9B%B8-c9c9b849351e">介紹我看一本天文學的書</a><br>
+<b>Aug 20, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%BE%9E%E4%B8%80%E5%89%87%E5%BD%A9%E5%88%B8%E8%A1%8C%E8%B2%BC%E6%96%87%E7%9C%8B%E5%81%87%E6%96%B0%E8%81%9E%E5%9C%A8%E7%A4%BE%E7%BE%A4%E7%B6%B2%E7%AB%99%E4%B8%8A%E7%9A%84%E5%82%B3%E6%92%AD-15d1188b2d55">從一則彩券行貼文看假新聞在社群網站上的傳播</a><br>
+<b>Jul 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%AD%B8%E7%BF%92%E5%BE%B7%E6%96%87%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%88%87-testdaf-%E5%BE%B7%E7%A6%8F%E8%80%83%E8%A9%A6%E6%BA%96%E5%82%99%E5%BF%83%E5%BE%97-835b78d9a08">學習德文心路歷程與 TestDaF 德福考試準備心得</a><br>
+<b>Apr 15, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%98%BF%E6%BB%B4%E8%8B%B1%E6%96%87%E6%AD%B7%E5%B9%B4%E6%84%9A%E4%BA%BA%E7%AF%80%E5%BD%B1%E7%89%87%E7%95%99%E8%A8%80%E5%88%86%E6%9E%90-f7731171d29e">阿滴英文歷年愚人節影片留言分析</a><br>
+<b>Feb 3, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%82%84%E6%98%AF%E8%A6%81%E6%9C%89%E4%B8%80%E6%8A%80%E4%B9%8B%E9%95%B7%E5%95%8A-be28ad188fac">還是要有一技之長啊！</a><br>
+<b>Jan 8, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%9D%B1%E6%96%B9%E5%BF%AB%E8%BB%8A%E8%AC%80%E6%AE%BA%E6%A1%88-%E7%9C%9F%E7%9A%84%E6%9C%89%E9%80%99%E6%A2%9D%E8%B7%AF%E7%B7%9A-%E8%B7%9F%E8%91%97-google-maps%E8%B5%B0%E4%B8%80%E8%B6%9F-80413df3b390">東方快車謀殺案，真的有這條路線？跟著 Google Maps走一趟</a>
+
 <h3>電影 Movies</h3>
 <b>June 6, 2020</b> <a href="https://medium.com/@chichinghsu/irrational-man-%E6%84%9B%E6%83%85%E5%A4%B1%E6%8E%A7%E9%BB%9E-%E5%8F%AF%E4%BB%A5%E5%86%8D%E5%A4%B1%E6%8E%A7%E4%B8%80%E9%BB%9E-2d42b989c43a">Irrational Man 《愛情失控點》可以再失控一點</a>
 
 <h3>建築 Architecture</h3>
 <b>Feb 8, 2019</b> <a href="https://medium.com/@chichinghsu/rem-koolhaas-%E8%91%A1%E8%90%84%E7%89%99-porto-%E4%BD%9C%E5%93%81-casa-da-m%C3%BAsica-%E5%B7%A1%E7%A6%AE-bfeaa180bf9d">Rem Koolhaas 葡萄牙 Porto 作品 Casa da Música 巡禮</a>
 
-<h3>其他 Others</h3>
-<b>Aug 20, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%BE%9E%E4%B8%80%E5%89%87%E5%BD%A9%E5%88%B8%E8%A1%8C%E8%B2%BC%E6%96%87%E7%9C%8B%E5%81%87%E6%96%B0%E8%81%9E%E5%9C%A8%E7%A4%BE%E7%BE%A4%E7%B6%B2%E7%AB%99%E4%B8%8A%E7%9A%84%E5%82%B3%E6%92%AD-15d1188b2d55">從一則彩券行貼文看假新聞在社群網站上的傳播</a><br>
-<b>Jul 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%AD%B8%E7%BF%92%E5%BE%B7%E6%96%87%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%88%87-testdaf-%E5%BE%B7%E7%A6%8F%E8%80%83%E8%A9%A6%E6%BA%96%E5%82%99%E5%BF%83%E5%BE%97-835b78d9a08">學習德文心路歷程與 TestDaF 德福考試準備心得</a><br>
-<b>Apr 15, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%98%BF%E6%BB%B4%E8%8B%B1%E6%96%87%E6%AD%B7%E5%B9%B4%E6%84%9A%E4%BA%BA%E7%AF%80%E5%BD%B1%E7%89%87%E7%95%99%E8%A8%80%E5%88%86%E6%9E%90-f7731171d29e">阿滴英文歷年愚人節影片留言分析</a><br>
-<b>Feb 3, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%82%84%E6%98%AF%E8%A6%81%E6%9C%89%E4%B8%80%E6%8A%80%E4%B9%8B%E9%95%B7%E5%95%8A-be28ad188fac">還是要有一技之長啊！</a><br>
-<b>Jan 8, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%9D%B1%E6%96%B9%E5%BF%AB%E8%BB%8A%E8%AC%80%E6%AE%BA%E6%A1%88-%E7%9C%9F%E7%9A%84%E6%9C%89%E9%80%99%E6%A2%9D%E8%B7%AF%E7%B7%9A-%E8%B7%9F%E8%91%97-google-maps%E8%B5%B0%E4%B8%80%E8%B6%9F-80413df3b390">東方快車謀殺案，真的有這條路線？跟著 Google Maps走一趟</a>
 
 </body></html> 
