--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ b {padding-left:2em; }
 <body>
 <h1>Articles</h1>
 
-<b><a href="https://medium.com/@chichinghsu">CCHsu @medium</a></b>
+<b><a href="https://medium.com/@chichinghsu">CCHsu @medium</a></b><br>
+<b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>碩士生活 ETH Zürich</h3>
 <b>Feb 25, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-%E4%BA%8C-%E8%A2%AB%E7%95%B6%E5%95%A6-d6329b73269a">我在台灣的那套讀書方式派不上用場（二）被當啦</a><br>
