--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ b {padding-left:2em; }
 <b>Dec 27, 2018</b> <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a>
 
 <h3>書 Books</h3>
-
+<b>Oct 2, 2020</b> <a href="https://medium.com/@chichinghsu/%E8%AA%B0%E6%98%AF%E7%95%B0%E9%84%89%E4%BA%BA-%E8%AE%80%E5%8D%A1%E8%AC%AC-%E7%95%B0%E9%84%89%E4%BA%BA-5c8d3373d59d">誰是異鄉人？讀卡謬《異鄉人》</a><br>
 <b>Jun 23, 2020</b> <a href="https://medium.com/@chichinghsu/%E4%B8%96%E7%95%8C%E6%9C%AB%E6%97%A5%E8%88%87%E5%86%B7%E9%85%B7%E7%95%B0%E5%A2%83-%E6%9D%91%E4%B8%8A%E6%98%A5%E6%A8%B9%E7%9A%84%E5%AD%A4%E5%96%AE%E5%8C%97%E5%8D%8A%E7%90%83-99376fecef94">《世界末日與冷酷異境》村上春樹的孤單北半球</a><br>
 <b>May 17, 2020</b> <a href="https://medium.com/@chichinghsu/%E4%BD%A0%E8%AA%AA-%E5%AF%AE%E5%9C%8B%E5%88%B0%E5%BA%95%E6%9C%89%E4%BB%80%E9%BA%BC-%E6%9D%91%E4%B8%8A%E6%98%A5%E6%A8%B9%E4%B9%8B%E6%97%85%E8%A1%8C%E7%9A%84%E6%84%8F%E7%BE%A9-6e32aaee9cc1">《你說，寮國到底有什麼？》村上春樹之旅行的意義</a><br>
 <b>Jun 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%A1%8C%E9%81%8E%E5%9C%B0%E7%8D%84%E4%B9%8B%E8%B7%AF-%E4%BD%A0%E5%8F%AF%E4%BB%A5%E5%B0%8D%E6%8A%97%E5%85%A8%E4%B8%96%E7%95%8C%E5%97%8E-579a107c103d">《行過地獄之路》你可以對抗全世界嗎</a><br>
