--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ b {padding-left:2em; }
 <b>Mar 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%93%88%E8%96%A9%E5%85%8B%E9%98%BF%E6%8B%89%E6%9C%A8%E5%9C%96%E6%A9%9F%E5%A0%B4%E5%A5%87%E9%81%87%E8%A8%98-b559176295ee">哈薩克阿拉木圖機場奇遇記</a>
 
 <h3>瑞士 Switzerland</h3>
+<b>Oct 23, 2020</b><a href="https://chichinghsu.medium.com/%E5%AE%89%E7%A9%A9%E5%B9%B3%E9%A0%86%E6%98%AF%E8%AA%B0%E4%BA%BA%E7%94%9F-2cc54feec2ad"> 安穩平順是誰人生</a><br>
 <b>Sept 18, 2020</b><a href="https://medium.com/@chichinghsu/%E6%88%91%E8%88%87%E5%8F%B0%E7%81%A3%E4%B8%8D%E7%9B%B8%E8%A6%8B%E5%B7%B2%E4%BA%8C%E5%B9%B4%E9%A4%98%E4%BA%86-dbad2ffe4593"> 我與台灣不相見已二年餘了</a><br>
 <b>Aug 23, 2020</b><a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E8%A1%97%E9%A0%AD%E5%85%A9%E5%BC%B5%E6%B5%B7%E5%A0%B1%E8%83%8C%E5%BE%8C%E7%9A%84%E7%A7%98%E5%AF%86-f7b0f802a3c8"> 蘇黎世街頭兩張海報背後的秘密</a><br>
 <b>Jul 12, 2020</b><a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E8%B6%85%E5%B8%82%E8%A3%A1%E7%9A%84%E6%B0%B8%E7%BA%8C%E8%88%87%E7%92%B0%E4%BF%9D-58a621896fc8"> 瑞士超市裡的永續與環保</a><br>
