--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@ b {padding-left:2em; }
 <b><a href="https://medium.com/@chichinghsu">CCHsu @medium</a></b><br>
 <b>Contact: hsuch (at) ethz.ch </b>
 
+<h3>如果你不知道要看哪篇</h3>
+<b><a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a></b><br>
+<b><a href="https://medium.com/@chichinghsu/%E6%88%91%E8%88%87%E5%8F%B0%E7%81%A3%E4%B8%8D%E7%9B%B8%E8%A6%8B%E5%B7%B2%E4%BA%8C%E5%B9%B4%E9%A4%98%E4%BA%86-dbad2ffe4593"> 我與台灣不相見已二年餘了</a></b><br>
+<b><a href="https://medium.com/@chichinghsu/%E6%8B%92%E7%B5%95%E6%89%BF%E8%AA%8D%E4%BA%BA%E7%94%9F%E6%B2%92%E6%9C%89%E6%84%8F%E7%BE%A9-a5ac60e0648c">《人性枷鎖》拒絕承認人生沒有意義</a></b><br>
+<b><a href="https://medium.com/@chichinghsu/irrational-man-%E6%84%9B%E6%83%85%E5%A4%B1%E6%8E%A7%E9%BB%9E-%E5%8F%AF%E4%BB%A5%E5%86%8D%E5%A4%B1%E6%8E%A7%E4%B8%80%E9%BB%9E-2d42b989c43a">Irrational Man 《愛情失控點》可以再失控一點</a></b><br>
+
 <h3>碩士生活 ETH Zürich</h3>
 <b>Feb 25, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-%E4%BA%8C-%E8%A2%AB%E7%95%B6%E5%95%A6-d6329b73269a">我在台灣的那套讀書方式派不上用場（二）被當啦</a><br>
 <b>Jan 17, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-b21b15a87493">我在台灣的那套讀書方式派不上用場</a><br>
