--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ b {padding-left:2em; }
 <b>Dec 27, 2018</b> <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a>
 
 <h3>書 Books</h3>
+<b>Dec 7, 2020</b> <a href="https://chichinghsu.medium.com/%E5%B0%BC%E7%BE%85%E6%B2%B3%E8%AC%80%E6%AE%BA%E6%A1%88-%E5%8F%8A%E8%98%87%E4%B8%B9%E8%88%87%E5%8D%97%E8%98%87%E4%B8%B9%E7%9A%84%E5%89%8D%E4%B8%96%E4%BB%8A%E7%94%9F-bce2b522d29b">《尼羅河謀殺案》及蘇丹與南蘇丹的前世今生</a><br>
 <b>Oct 2, 2020</b> <a href="https://medium.com/@chichinghsu/%E8%AA%B0%E6%98%AF%E7%95%B0%E9%84%89%E4%BA%BA-%E8%AE%80%E5%8D%A1%E8%AC%AC-%E7%95%B0%E9%84%89%E4%BA%BA-5c8d3373d59d">誰是異鄉人？讀卡謬《異鄉人》</a><br>
 <b>Jun 23, 2020</b> <a href="https://medium.com/@chichinghsu/%E4%B8%96%E7%95%8C%E6%9C%AB%E6%97%A5%E8%88%87%E5%86%B7%E9%85%B7%E7%95%B0%E5%A2%83-%E6%9D%91%E4%B8%8A%E6%98%A5%E6%A8%B9%E7%9A%84%E5%AD%A4%E5%96%AE%E5%8C%97%E5%8D%8A%E7%90%83-99376fecef94">《世界末日與冷酷異境》村上春樹的孤單北半球</a><br>
 <b>May 17, 2020</b> <a href="https://medium.com/@chichinghsu/%E4%BD%A0%E8%AA%AA-%E5%AF%AE%E5%9C%8B%E5%88%B0%E5%BA%95%E6%9C%89%E4%BB%80%E9%BA%BC-%E6%9D%91%E4%B8%8A%E6%98%A5%E6%A8%B9%E4%B9%8B%E6%97%85%E8%A1%8C%E7%9A%84%E6%84%8F%E7%BE%A9-6e32aaee9cc1">《你說，寮國到底有什麼？》村上春樹之旅行的意義</a><br>
@@ -58,7 +59,8 @@ b {padding-left:2em; }
 <b>Feb 3, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%82%84%E6%98%AF%E8%A6%81%E6%9C%89%E4%B8%80%E6%8A%80%E4%B9%8B%E9%95%B7%E5%95%8A-be28ad188fac">還是要有一技之長啊！</a><br>
 <b>Jan 8, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%9D%B1%E6%96%B9%E5%BF%AB%E8%BB%8A%E8%AC%80%E6%AE%BA%E6%A1%88-%E7%9C%9F%E7%9A%84%E6%9C%89%E9%80%99%E6%A2%9D%E8%B7%AF%E7%B7%9A-%E8%B7%9F%E8%91%97-google-maps%E8%B5%B0%E4%B8%80%E8%B6%9F-80413df3b390">東方快車謀殺案，真的有這條路線？跟著 Google Maps走一趟</a>
 
-<h3>電影 Movies</h3>
+<h3>電影與影集 Movies and Series</h3>
+<b>Nov 20, 2020</b> <a href="https://chichinghsu.medium.com/%E8%93%8B%E8%8C%B2%E4%B9%8B%E9%81%93-%E7%96%91%E9%9B%A3%E8%A7%A3%E6%B3%95-%E6%88%91%E5%80%91%E4%B8%8D%E4%B8%80%E6%A8%A3-%E4%BD%86%E4%B9%9F%E6%B2%92%E9%82%A3%E9%BA%BC%E4%B8%8D%E4%B8%80%E6%A8%A3-442d6f9995e7">《蓋茲之道：疑難解法》我們不一樣，但也沒那麼不一樣</a><br>
 <b>June 6, 2020</b> <a href="https://medium.com/@chichinghsu/irrational-man-%E6%84%9B%E6%83%85%E5%A4%B1%E6%8E%A7%E9%BB%9E-%E5%8F%AF%E4%BB%A5%E5%86%8D%E5%A4%B1%E6%8E%A7%E4%B8%80%E9%BB%9E-2d42b989c43a">Irrational Man 《愛情失控點》可以再失控一點</a>
 
 <h3>建築 Architecture</h3>
