--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章</h3>
+<b>Jan 31, 2021</b><a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6"> 在家工作雜談與 2021的暴雪</a><br>
 <b>Jan 03, 2021</b><a href="https://chichinghsu.medium.com/%E6%96%B0%E5%B9%B4%E9%9A%A8%E7%AD%86%E4%B9%8B%E8%AE%80-%E5%8D%8A%E7%94%9F%E7%B7%A3-%E6%88%91%E6%93%81%E6%9C%89%E7%9A%84%E9%83%BD%E6%98%AF%E5%83%A5%E5%80%96-424d710198fe"> 新年隨筆之讀《半生緣》我擁有的都是僥倖</a><br>
 <b>Dec 24, 2020</b><a href="https://chichinghsu.medium.com/%E5%8F%B0%E7%81%A3-podcast-2020%E5%B9%B4-12%E6%9C%88%E6%8E%92%E5%90%8D%E8%A7%80%E5%AF%9F%E5%A0%B1%E5%91%8A-ad28f488975d"> 台灣 Podcast 2020年 12月排名觀察報告</a><br>
-<b>Dec 7, 2020</b><a href="https://chichinghsu.medium.com/%E5%B0%BC%E7%BE%85%E6%B2%B3%E8%AC%80%E6%AE%BA%E6%A1%88-%E5%8F%8A%E8%98%87%E4%B8%B9%E8%88%87%E5%8D%97%E8%98%87%E4%B8%B9%E7%9A%84%E5%89%8D%E4%B8%96%E4%BB%8A%E7%94%9F-bce2b522d29b">《尼羅河謀殺案》及蘇丹與南蘇丹的前世今生</a>
 
 <h3>如果你不知道要看哪篇</h3>
 <b>[申請學校] <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a></b><br>
@@ -46,6 +46,7 @@ b {padding-left:2em; }
 <b>Apr 15, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%98%BF%E6%BB%B4%E8%8B%B1%E6%96%87%E6%AD%B7%E5%B9%B4%E6%84%9A%E4%BA%BA%E7%AF%80%E5%BD%B1%E7%89%87%E7%95%99%E8%A8%80%E5%88%86%E6%9E%90-f7731171d29e">阿滴英文歷年愚人節影片留言分析</a>
 
 <h3>瑞士 Switzerland</h3>
+<b>Jan 31, 2021</b><a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6">在家工作雜談與 2021的暴雪</a><br>
 <b>Oct 23, 2020</b><a href="https://chichinghsu.medium.com/%E5%AE%89%E7%A9%A9%E5%B9%B3%E9%A0%86%E6%98%AF%E8%AA%B0%E4%BA%BA%E7%94%9F-2cc54feec2ad"> 安穩平順是誰人生</a><br>
 <b>Sept 18, 2020</b><a href="https://medium.com/@chichinghsu/%E6%88%91%E8%88%87%E5%8F%B0%E7%81%A3%E4%B8%8D%E7%9B%B8%E8%A6%8B%E5%B7%B2%E4%BA%8C%E5%B9%B4%E9%A4%98%E4%BA%86-dbad2ffe4593"> 我與台灣不相見已二年餘了</a><br>
 <b>Aug 23, 2020</b><a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E8%A1%97%E9%A0%AD%E5%85%A9%E5%BC%B5%E6%B5%B7%E5%A0%B1%E8%83%8C%E5%BE%8C%E7%9A%84%E7%A7%98%E5%AF%86-f7b0f802a3c8"> 蘇黎世街頭兩張海報背後的秘密</a><br>
