--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章</h3>
+<b>Feb 13, 2021</b><a href="https://chichinghsu.medium.com/%E6%B7%B1%E5%BA%A6%E6%80%9D%E8%80%83-%E8%A5%BF%E6%B4%8B%E6%A3%8B%E7%89%B9%E7%B4%9A%E5%A4%A7%E5%B8%AB%E8%88%87%E4%BA%BA%E5%B7%A5%E6%99%BA%E6%85%A7%E7%9A%84%E6%81%A9%E6%80%A8%E6%83%85%E4%BB%87%E5%8F%B2-385faef914c3"> 《深度思考》西洋棋特級大師與人工智慧的恩怨情仇史</a><br>
 <b>Jan 31, 2021</b><a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6"> 在家工作雜談與 2021的暴雪</a><br>
 <b>Jan 03, 2021</b><a href="https://chichinghsu.medium.com/%E6%96%B0%E5%B9%B4%E9%9A%A8%E7%AD%86%E4%B9%8B%E8%AE%80-%E5%8D%8A%E7%94%9F%E7%B7%A3-%E6%88%91%E6%93%81%E6%9C%89%E7%9A%84%E9%83%BD%E6%98%AF%E5%83%A5%E5%80%96-424d710198fe"> 新年隨筆之讀《半生緣》我擁有的都是僥倖</a><br>
 <b>Dec 24, 2020</b><a href="https://chichinghsu.medium.com/%E5%8F%B0%E7%81%A3-podcast-2020%E5%B9%B4-12%E6%9C%88%E6%8E%92%E5%90%8D%E8%A7%80%E5%AF%9F%E5%A0%B1%E5%91%8A-ad28f488975d"> 台灣 Podcast 2020年 12月排名觀察報告</a><br>
@@ -33,6 +34,7 @@ b {padding-left:2em; }
 <b>Dec 27, 2018</b> <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a>
 
 <h3>書 Books</h3>
+<b>Feb 13, 2021</b><a href="https://chichinghsu.medium.com/%E6%B7%B1%E5%BA%A6%E6%80%9D%E8%80%83-%E8%A5%BF%E6%B4%8B%E6%A3%8B%E7%89%B9%E7%B4%9A%E5%A4%A7%E5%B8%AB%E8%88%87%E4%BA%BA%E5%B7%A5%E6%99%BA%E6%85%A7%E7%9A%84%E6%81%A9%E6%80%A8%E6%83%85%E4%BB%87%E5%8F%B2-385faef914c3"> 《深度思考》西洋棋特級大師與人工智慧的恩怨情仇史</a><br>
 <b>Jan 03, 2021</b><a href="https://chichinghsu.medium.com/%E6%96%B0%E5%B9%B4%E9%9A%A8%E7%AD%86%E4%B9%8B%E8%AE%80-%E5%8D%8A%E7%94%9F%E7%B7%A3-%E6%88%91%E6%93%81%E6%9C%89%E7%9A%84%E9%83%BD%E6%98%AF%E5%83%A5%E5%80%96-424d710198fe"> 新年隨筆之讀《半生緣》我擁有的都是僥倖</a><br>
 <b>Dec 7, 2020</b> <a href="https://chichinghsu.medium.com/%E5%B0%BC%E7%BE%85%E6%B2%B3%E8%AC%80%E6%AE%BA%E6%A1%88-%E5%8F%8A%E8%98%87%E4%B8%B9%E8%88%87%E5%8D%97%E8%98%87%E4%B8%B9%E7%9A%84%E5%89%8D%E4%B8%96%E4%BB%8A%E7%94%9F-bce2b522d29b">《尼羅河謀殺案》及蘇丹與南蘇丹的前世今生</a><br>
 <b>Oct 2, 2020</b> <a href="https://medium.com/@chichinghsu/%E8%AA%B0%E6%98%AF%E7%95%B0%E9%84%89%E4%BA%BA-%E8%AE%80%E5%8D%A1%E8%AC%AC-%E7%95%B0%E9%84%89%E4%BA%BA-5c8d3373d59d">誰是異鄉人？讀卡謬《異鄉人》</a><br>
