--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章</h3>
-<b>Mar 13, 2021</b><a href="https://chichinghsu.medium.com/%E5%90%84%E7%A8%AE%E8%A7%A3%E6%B1%BA%E5%95%8F%E9%A1%8C%E7%9A%84%E6%96%B9%E6%B3%95-207b24085144"> 各種解決問題的方法</a><br>
-<b>Feb 22, 2021</b><a href="https://chichinghsu.medium.com/%E4%B8%AD%E6%9D%B1%E5%BF%83%E8%87%9F-%E4%BD%A0%E6%9C%89%E6%89%80%E4%B8%8D%E7%9F%A5%E7%9A%84%E6%B2%99%E7%83%8F%E5%9C%B0%E9%98%BF%E6%8B%89%E4%BC%AF-167add66345f"> 《中東心臟》你有所不知的沙烏地阿拉伯</a><br>
-<b>Feb 13, 2021</b><a href="https://chichinghsu.medium.com/%E6%B7%B1%E5%BA%A6%E6%80%9D%E8%80%83-%E8%A5%BF%E6%B4%8B%E6%A3%8B%E7%89%B9%E7%B4%9A%E5%A4%A7%E5%B8%AB%E8%88%87%E4%BA%BA%E5%B7%A5%E6%99%BA%E6%85%A7%E7%9A%84%E6%81%A9%E6%80%A8%E6%83%85%E4%BB%87%E5%8F%B2-385faef914c3"> 《深度思考》西洋棋特級大師與人工智慧的恩怨情仇史</a><br>
-<b>Jan 31, 2021</b><a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6"> 在家工作雜談與 2021的暴雪</a><br>
+<b>Mar 28, 2021</b> <a href="https://chichinghsu.medium.com/%E9%AE%AD%E9%AD%9A%E5%BB%81%E6%89%80%E5%A5%87%E8%AB%87-fc9f891c0fb8">鮭魚廁所奇談
+</a><br>
+<b>Mar 13, 2021</b> <a href="https://chichinghsu.medium.com/%E5%90%84%E7%A8%AE%E8%A7%A3%E6%B1%BA%E5%95%8F%E9%A1%8C%E7%9A%84%E6%96%B9%E6%B3%95-207b24085144">各種解決問題的方法</a><br>
+<b>Feb 22, 2021</b> <a href="https://chichinghsu.medium.com/%E4%B8%AD%E6%9D%B1%E5%BF%83%E8%87%9F-%E4%BD%A0%E6%9C%89%E6%89%80%E4%B8%8D%E7%9F%A5%E7%9A%84%E6%B2%99%E7%83%8F%E5%9C%B0%E9%98%BF%E6%8B%89%E4%BC%AF-167add66345f">《中東心臟》你有所不知的沙烏地阿拉伯</a><br>
+<b>Feb 13, 2021</b> <a href="https://chichinghsu.medium.com/%E6%B7%B1%E5%BA%A6%E6%80%9D%E8%80%83-%E8%A5%BF%E6%B4%8B%E6%A3%8B%E7%89%B9%E7%B4%9A%E5%A4%A7%E5%B8%AB%E8%88%87%E4%BA%BA%E5%B7%A5%E6%99%BA%E6%85%A7%E7%9A%84%E6%81%A9%E6%80%A8%E6%83%85%E4%BB%87%E5%8F%B2-385faef914c3">《深度思考》西洋棋特級大師與人工智慧的恩怨情仇史</a><br>
+
 
 <h3>如果你不知道要看哪篇</h3>
 <b>[申請學校] <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a></b><br>
@@ -67,7 +69,9 @@ b {padding-left:2em; }
 <b>Mar 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%93%88%E8%96%A9%E5%85%8B%E9%98%BF%E6%8B%89%E6%9C%A8%E5%9C%96%E6%A9%9F%E5%A0%B4%E5%A5%87%E9%81%87%E8%A8%98-b559176295ee">哈薩克阿拉木圖機場奇遇記</a>
 
 <h3>其他 Others</h3>
-<b>Mar 13, 2021</b><a href="https://chichinghsu.medium.com/%E5%90%84%E7%A8%AE%E8%A7%A3%E6%B1%BA%E5%95%8F%E9%A1%8C%E7%9A%84%E6%96%B9%E6%B3%95-207b24085144"> 各種解決問題的方法</a><br>
+<b>Mar 28, 2021</b> <a href="https://chichinghsu.medium.com/%E9%AE%AD%E9%AD%9A%E5%BB%81%E6%89%80%E5%A5%87%E8%AB%87-fc9f891c0fb8">鮭魚廁所奇談
+</a><br>
+<b>Mar 13, 2021</b> <a href="https://chichinghsu.medium.com/%E5%90%84%E7%A8%AE%E8%A7%A3%E6%B1%BA%E5%95%8F%E9%A1%8C%E7%9A%84%E6%96%B9%E6%B3%95-207b24085144">各種解決問題的方法</a><br>
 <b>Aug 13, 2020</b> <a href="https://medium.com/@chichinghsu/%E4%BB%8B%E7%B4%B9%E6%88%91%E7%9C%8B%E4%B8%80%E6%9C%AC%E5%A4%A9%E6%96%87%E5%AD%B8%E7%9A%84%E6%9B%B8-c9c9b849351e">介紹我看一本天文學的書</a><br>
 <b>Aug 20, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%BE%9E%E4%B8%80%E5%89%87%E5%BD%A9%E5%88%B8%E8%A1%8C%E8%B2%BC%E6%96%87%E7%9C%8B%E5%81%87%E6%96%B0%E8%81%9E%E5%9C%A8%E7%A4%BE%E7%BE%A4%E7%B6%B2%E7%AB%99%E4%B8%8A%E7%9A%84%E5%82%B3%E6%92%AD-15d1188b2d55">從一則彩券行貼文看假新聞在社群網站上的傳播</a><br>
 <b>Jul 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%AD%B8%E7%BF%92%E5%BE%B7%E6%96%87%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%88%87-testdaf-%E5%BE%B7%E7%A6%8F%E8%80%83%E8%A9%A6%E6%BA%96%E5%82%99%E5%BF%83%E5%BE%97-835b78d9a08">學習德文心路歷程與 TestDaF 德福考試準備心得</a><br>
