--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章</h3>
+<b>Apr 30, 2021</b> <a href="https://chichinghsu.medium.com/%E5%8E%9F%E5%AD%90%E7%BF%92%E6%85%A3-%E6%88%91%E5%B0%B1%E7%88%9B%E9%82%84%E6%98%AF%E6%88%91%E5%B0%B1%E6%87%B6-216232ebe3c7">《原子習慣》我就爛還是我就懶？</a><br>
 <b>Apr 16, 2021</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E4%B8%89%E5%AF%B6%E5%85%A5%E9%96%80%E7%B0%A1%E4%BB%8B-e16e6751c910">瑞士三寶入門簡介</a><br>
 <b>Mar 28, 2021</b> <a href="https://chichinghsu.medium.com/%E9%AE%AD%E9%AD%9A%E5%BB%81%E6%89%80%E5%A5%87%E8%AB%87-fc9f891c0fb8">鮭魚廁所奇談
 </a><br>
@@ -38,6 +39,7 @@ b {padding-left:2em; }
 <b>Dec 27, 2018</b> <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a>
 
 <h3>書 Books</h3>
+<b>Apr 30, 2021</b> <a href="https://chichinghsu.medium.com/%E5%8E%9F%E5%AD%90%E7%BF%92%E6%85%A3-%E6%88%91%E5%B0%B1%E7%88%9B%E9%82%84%E6%98%AF%E6%88%91%E5%B0%B1%E6%87%B6-216232ebe3c7">《原子習慣》我就爛還是我就懶？</a><br>
 <b>Feb 22, 2021</b><a href="https://chichinghsu.medium.com/%E4%B8%AD%E6%9D%B1%E5%BF%83%E8%87%9F-%E4%BD%A0%E6%9C%89%E6%89%80%E4%B8%8D%E7%9F%A5%E7%9A%84%E6%B2%99%E7%83%8F%E5%9C%B0%E9%98%BF%E6%8B%89%E4%BC%AF-167add66345f"> 《中東心臟》你有所不知的沙烏地阿拉伯</a><br>
 <b>Feb 13, 2021</b><a href="https://chichinghsu.medium.com/%E6%B7%B1%E5%BA%A6%E6%80%9D%E8%80%83-%E8%A5%BF%E6%B4%8B%E6%A3%8B%E7%89%B9%E7%B4%9A%E5%A4%A7%E5%B8%AB%E8%88%87%E4%BA%BA%E5%B7%A5%E6%99%BA%E6%85%A7%E7%9A%84%E6%81%A9%E6%80%A8%E6%83%85%E4%BB%87%E5%8F%B2-385faef914c3"> 《深度思考》西洋棋特級大師與人工智慧的恩怨情仇史</a><br>
 <b>Jan 03, 2021</b><a href="https://chichinghsu.medium.com/%E6%96%B0%E5%B9%B4%E9%9A%A8%E7%AD%86%E4%B9%8B%E8%AE%80-%E5%8D%8A%E7%94%9F%E7%B7%A3-%E6%88%91%E6%93%81%E6%9C%89%E7%9A%84%E9%83%BD%E6%98%AF%E5%83%A5%E5%80%96-424d710198fe"> 新年隨筆之讀《半生緣》我擁有的都是僥倖</a><br>
