new article, change category order

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>Nov 2, 2022</b> <a href="https://chichinghsu.medium.com/%E6%8D%B7%E5%85%8B%E5%B8%83%E6%8B%89%E6%A0%BC-2022-%E5%B9%B4%E7%A7%8B-148f6d8747d5">捷克布拉格 2022 年秋</a><br>
 <b>Sept 18, 2022</b> <a href="https://chichinghsu.medium.com/%E8%98%87%E9%BB%8E%E4%B8%96%E5%B0%84%E6%93%8A%E7%AF%80%E8%88%87%E7%A7%8B%E5%A4%A9%E5%B1%85%E7%95%99%E8%AD%89-a2966f791d0b">蘇黎世射擊節與秋天居留證</a><br>
 <b>Aug 28, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B0%B4%E5%8A%9B%E7%99%BC%E9%9B%BB%E5%BB%A0%E4%B8%80%E6%97%A5%E9%81%8A-7c2f2bf036c0">瑞士水力發電廠一日遊</a><br>
 <b>June 19, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99-toledo-%E9%9B%9C%E8%A8%98-5b8fd67c1167">西班牙 Toledo 雜記</a><br>
@@ -37,11 +38,11 @@ b {padding-left:2em; }
 <b>Apr 18, 2022</b> <a href="https://chichinghsu.medium.com/%E5%AE%89%E8%83%BD%E8%BE%A8%E6%88%91%E5%9C%A8%E7%91%9E%E5%A3%AB%E5%BE%B7%E5%9C%8B-a047f9489a44">安能辨我在瑞士德國</a><br>
 
 <h3>文章分類 Category</h3>
-<div class="indent_left"><b><a href="#eth_zuerich">碩士生活 ETH Zürich</a></b></div>
+<div class="indent_left"><b><a href="#travel">遊記 Travel</a></b></div>
 <div class="indent_right"><b><a href="#books">書 Books</a></b></div>
 <div class="indent_left"><b><a href="#switzerland">瑞士 Switzerland</a></b></div>
 <div class="indent_right"><b><a href="#others">其他 Others</a></b></div>
-<div class="indent_left"><b><a href="#travel">遊記 Travel</a></b></div>
+<div class="indent_left"><b><a href="#eth_zuerich">碩士生活 ETH Zürich</a></b></div>
 <div class="indent_right"><b><a href="#data">數據分析 Data</a></b></div>
 <div class="indent_left"><b><a href="#architecture">建築 Architecture</a></b></div>
 <div class="indent_right"><b><a href="#movies">電影與影集 Movies and Series</a></b></div>
@@ -55,14 +56,18 @@ b {padding-left:2em; }
 
 <hr style="width:50%;text-align:left;margin-left:2em;">
 
-<div class="category" id="eth_zuerich"><h3>碩士生活 ETH Zürich</h3></div>
-<b>Jan 16, 2022</b> <a href=https://chichinghsu.medium.com/2022-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E6%A0%A1%E5%88%8A%E8%A9%AD%E7%95%B0%E5%9C%96%E7%89%87-b174d80aaf02">2022 年第一篇之校刊詭異圖片</a><br>
-<b>July 30, 2021</b> <a href="https://chichinghsu.medium.com/%E7%A2%A9%E5%A3%AB%E8%AB%96%E6%96%87%E9%81%87%E5%88%B0%E5%A4%A7%E7%93%B6%E9%A0%B8-4f12ac950e5a">碩士論文遇到大瓶頸</a><br>
-<b>Feb 25, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-%E4%BA%8C-%E8%A2%AB%E7%95%B6%E5%95%A6-d6329b73269a">我在台灣的那套讀書方式派不上用場（二）被當啦</a><br>
-<b>Jan 17, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-b21b15a87493">我在台灣的那套讀書方式派不上用場</a><br>
-<b>Jan 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E8%81%AF%E9%82%A6%E7%90%86%E5%B7%A5%E5%AD%B8%E9%99%A2-eth-z%C3%BCrich%E7%94%B3%E8%AB%8B%E5%B0%8F%E5%B0%8F%E5%BF%83%E5%BE%97%E7%B8%BD%E7%B5%90-360766f2aa3c">蘇黎世聯邦理工學院 ETH Zürich申請小小心得總結</a><br>
-<b>Dec 31, 2018</b> <a href="https://medium.com/@chichinghsu/%E8%AE%80%E6%A9%9F%E5%99%A8%E5%AD%B8%E7%BF%92-ensemble-learning%E6%9C%89%E6%84%9F%E8%80%8C%E7%99%BC%E4%B9%8B%E6%B0%91%E4%B8%BB%E5%88%B6%E5%BA%A6%E7%9A%84%E5%8F%8D%E6%80%9D-9a843f11b291">讀機器學習 Ensemble learning有感而發之民主制度的反思</a><br>
-<b>Dec 27, 2018</b> <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a>
+<div class="category" id="travel"><h3>遊記 Travel</h3></div>
+<b>Nov 2, 2022</b> <a href="https://chichinghsu.medium.com/%E6%8D%B7%E5%85%8B%E5%B8%83%E6%8B%89%E6%A0%BC-2022-%E5%B9%B4%E7%A7%8B-148f6d8747d5">捷克布拉格 2022 年秋</a><br>
+<b>June 19, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99-toledo-%E9%9B%9C%E8%A8%98-5b8fd67c1167">西班牙 Toledo 雜記</a><br>
+<b>Apr 3, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B4%9B%E6%A1%91-2022-%E5%B9%B4%E6%98%A5-15153af36076">瑞士洛桑 2022 年春</a><br>
+<b>Nov 10, 2021</b> <a href="https://chichinghsu.medium.com/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2021-%E5%B9%B4%E7%A7%8B-d7d1fced4f0">英國倫敦 2021 年秋</a><br>
+<b>Oct 14, 2021</b> <a href="https://chichinghsu.medium.com/%E6%85%95%E5%B0%BC%E9%BB%91%E7%81%AB%E8%BB%8A%E8%AA%A4%E9%BB%9E%E8%A8%98-7cd6cbf42cfe">慕尼黑火車誤點記</a><br>
+<b>Sept 29, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99%E9%A6%AC%E5%BE%B7%E9%87%8C-2021%E5%B9%B4%E7%A7%8B-2dc087415b48">西班牙馬德里 2021 年秋</a><br>
+<b>July 31, 2020</b> <a href="https://medium.com/@chichinghsu/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2020-%E5%B9%B4%E5%88%9D-7d8e90f0f1da">英國倫敦 2020 年初
+</a><br>
+<b>May 12, 2020</b> <a href="https://medium.com/@chichinghsu/%E5%81%87%E6%96%B0%E8%81%9E%E7%9A%84%E7%94%A2%E5%9C%B0-%E5%8C%97%E9%A6%AC%E5%85%B6%E9%A0%93%E5%85%B1%E5%92%8C%E5%9C%8B%E4%B9%8B%E6%97%85-18bc667654d">假新聞的產地？北馬其頓共和國之旅</a><br>
+<b>Nov 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%90%89%E7%88%BE%E5%90%89%E6%96%AF-kyrgyzstan-%E4%B9%8B%E6%97%85-9637ced4238d">吉爾吉斯 (Kyrgyzstan)之旅</a><br>
+<b>Mar 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%93%88%E8%96%A9%E5%85%8B%E9%98%BF%E6%8B%89%E6%9C%A8%E5%9C%96%E6%A9%9F%E5%A0%B4%E5%A5%87%E9%81%87%E8%A8%98-b559176295ee">哈薩克阿拉木圖機場奇遇記</a>
 
 <div class="category" id="switzerland"><h3>瑞士 Switzerland</h3></div>
 <b>Sept 18, 2022</b> <a href="https://chichinghsu.medium.com/%E8%98%87%E9%BB%8E%E4%B8%96%E5%B0%84%E6%93%8A%E7%AF%80%E8%88%87%E7%A7%8B%E5%A4%A9%E5%B1%85%E7%95%99%E8%AD%89-a2966f791d0b">蘇黎世射擊節與秋天居留證</a><br>
@@ -81,6 +86,15 @@ b {padding-left:2em; }
 <b>Jan 2, 2019</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E9%9B%9E%E8%9B%8B%E5%88%86%E9%A1%9E-%E7%82%BA%E4%BB%80%E9%BA%BC%E5%83%B9%E5%B7%AE%E9%82%A3%E9%BA%BC%E5%A4%A7-%E8%9B%8B%E8%9B%8B%E7%9A%84%E5%93%80%E5%82%B7-%E8%AB%87%E4%BA%BA%E9%81%93-%E5%8B%95%E7%89%A9%E9%81%93-85bee19f8eee">瑞士雞蛋分類，為什麼價差那麼大？蛋蛋的哀傷，談人道（動物道）</a><br>
 <b>Dec 29, 2018</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E7%94%A8%E4%BB%80%E9%BA%BC%E8%AA%9E%E8%A8%80-%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AFlogo%E4%BA%82%E8%AB%87-f0859a5f728c">瑞士用什麼語言？怎麼簡寫CH？瑞士鐵路LOGO亂談</a>
 
+<div class="category" id="eth_zuerich"><h3>碩士生活 ETH Zürich</h3></div>
+<b>Jan 16, 2022</b> <a href=https://chichinghsu.medium.com/2022-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E6%A0%A1%E5%88%8A%E8%A9%AD%E7%95%B0%E5%9C%96%E7%89%87-b174d80aaf02">2022 年第一篇之校刊詭異圖片</a><br>
+<b>July 30, 2021</b> <a href="https://chichinghsu.medium.com/%E7%A2%A9%E5%A3%AB%E8%AB%96%E6%96%87%E9%81%87%E5%88%B0%E5%A4%A7%E7%93%B6%E9%A0%B8-4f12ac950e5a">碩士論文遇到大瓶頸</a><br>
+<b>Feb 25, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-%E4%BA%8C-%E8%A2%AB%E7%95%B6%E5%95%A6-d6329b73269a">我在台灣的那套讀書方式派不上用場（二）被當啦</a><br>
+<b>Jan 17, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-b21b15a87493">我在台灣的那套讀書方式派不上用場</a><br>
+<b>Jan 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E8%81%AF%E9%82%A6%E7%90%86%E5%B7%A5%E5%AD%B8%E9%99%A2-eth-z%C3%BCrich%E7%94%B3%E8%AB%8B%E5%B0%8F%E5%B0%8F%E5%BF%83%E5%BE%97%E7%B8%BD%E7%B5%90-360766f2aa3c">蘇黎世聯邦理工學院 ETH Zürich申請小小心得總結</a><br>
+<b>Dec 31, 2018</b> <a href="https://medium.com/@chichinghsu/%E8%AE%80%E6%A9%9F%E5%99%A8%E5%AD%B8%E7%BF%92-ensemble-learning%E6%9C%89%E6%84%9F%E8%80%8C%E7%99%BC%E4%B9%8B%E6%B0%91%E4%B8%BB%E5%88%B6%E5%BA%A6%E7%9A%84%E5%8F%8D%E6%80%9D-9a843f11b291">讀機器學習 Ensemble learning有感而發之民主制度的反思</a><br>
+<b>Dec 27, 2018</b> <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a>
+
 <div class="category" id="books"><h3>書 Books</h3></div>
 <b>Mar 6, 2022</b> <a href="https://chichinghsu.medium.com/%E6%9D%B1%E4%BA%AC-%E8%8B%A5%E5%8D%B3%E8%8B%A5%E9%9B%A2-%E5%BE%98%E5%BE%8A%E9%81%8E%E5%A4%9A%E5%B0%91%E6%AB%A5%E7%AA%97-3eda1ce88628">《東京，若即若離》徘徊過多少櫥窗</a><br>
 <b>Dec 05, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A7%A3%E6%86%82%E9%9B%9C%E8%B2%A8%E5%BA%97-%E4%BD%95%E4%BB%A5%E8%A7%A3%E6%86%82-%E5%94%AF%E6%9C%89%E9%9B%9C%E8%B2%A8%E5%BA%97-46eebafc9b2e">《解憂雜貨店》何以解憂？唯有雜貨店</a><br>
@@ -97,17 +111,6 @@ b {padding-left:2em; }
 <b>June 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%A1%8C%E9%81%8E%E5%9C%B0%E7%8D%84%E4%B9%8B%E8%B7%AF-%E4%BD%A0%E5%8F%AF%E4%BB%A5%E5%B0%8D%E6%8A%97%E5%85%A8%E4%B8%96%E7%95%8C%E5%97%8E-579a107c103d">《行過地獄之路》你可以對抗全世界嗎</a><br>
 <b>Mar 21, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%8B%92%E7%B5%95%E6%89%BF%E8%AA%8D%E4%BA%BA%E7%94%9F%E6%B2%92%E6%9C%89%E6%84%8F%E7%BE%A9-a5ac60e0648c">《人性枷鎖》拒絕承認人生沒有意義</a>
 
-<div class="category" id="travel"><h3>遊記 Travel</h3></div>
-<b>June 19, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99-toledo-%E9%9B%9C%E8%A8%98-5b8fd67c1167">西班牙 Toledo 雜記</a><br>
-<b>Apr 3, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B4%9B%E6%A1%91-2022-%E5%B9%B4%E6%98%A5-15153af36076">瑞士洛桑 2022 年春</a><br>
-<b>Nov 10, 2021</b> <a href="https://chichinghsu.medium.com/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2021-%E5%B9%B4%E7%A7%8B-d7d1fced4f0">英國倫敦 2021 年秋</a><br>
-<b>Oct 14, 2021</b> <a href="https://chichinghsu.medium.com/%E6%85%95%E5%B0%BC%E9%BB%91%E7%81%AB%E8%BB%8A%E8%AA%A4%E9%BB%9E%E8%A8%98-7cd6cbf42cfe">慕尼黑火車誤點記</a><br>
-<b>Sept 29, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99%E9%A6%AC%E5%BE%B7%E9%87%8C-2021%E5%B9%B4%E7%A7%8B-2dc087415b48">西班牙馬德里 2021 年秋</a><br>
-<b>July 31, 2020</b> <a href="https://medium.com/@chichinghsu/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2020-%E5%B9%B4%E5%88%9D-7d8e90f0f1da">英國倫敦 2020 年初
-</a><br>
-<b>May 12, 2020</b> <a href="https://medium.com/@chichinghsu/%E5%81%87%E6%96%B0%E8%81%9E%E7%9A%84%E7%94%A2%E5%9C%B0-%E5%8C%97%E9%A6%AC%E5%85%B6%E9%A0%93%E5%85%B1%E5%92%8C%E5%9C%8B%E4%B9%8B%E6%97%85-18bc667654d">假新聞的產地？北馬其頓共和國之旅</a><br>
-<b>Nov 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%90%89%E7%88%BE%E5%90%89%E6%96%AF-kyrgyzstan-%E4%B9%8B%E6%97%85-9637ced4238d">吉爾吉斯 (Kyrgyzstan)之旅</a><br>
-<b>Mar 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%93%88%E8%96%A9%E5%85%8B%E9%98%BF%E6%8B%89%E6%9C%A8%E5%9C%96%E6%A9%9F%E5%A0%B4%E5%A5%87%E9%81%87%E8%A8%98-b559176295ee">哈薩克阿拉木圖機場奇遇記</a>
 
 <div class="category" id="others"><h3>其他 Others</h3></div>
 <b>Sept 09, 2021</b> <a href="https://chichinghsu.medium.com/%E8%BF%AA%E5%8D%A1%E8%BE%B2%E5%8E%9F%E4%BE%86%E6%98%AF%E5%8D%81%E9%A0%85%E5%85%A8%E8%83%BD-e282a259850e">迪卡農原來是十項全能</a><br>
